# idiots

./: .gitignore  README.md  pyproject.toml  requirements-lock.txt  requirements.in  requirements.txt  results_div.json  results_div_mse.json
idiots/dataset/: algorithmic.py  cifar_classification.py  dataloader.py  image_classification.py
idiots/experiments/: grokking.py  ntk.py
idiots/experiments/classification/: config.py  main.py  main_scaled.py  model.py  training.py
idiots/neutal-tangent-kernels/: ntk.py
idiots/notebooks/: explore_checkpoints.ipynb  explore_checkpoints2.ipynb  how_linear.ipynb  init_svm_accuracy.ipynb  linear_model.ipynb  linear_mse_model.ipynb  linearise_gf.ipynb  ode_train.ipynb  plot_LU.ipynb  plot_results.ipynb  plot_svm_dots_results.ipynb  plot_svm_dots_results2.ipynb  pruning.ipynb  results_div.json  results_div_mse.json  svm_accuracy.ipynb  svm_accuracy.py  svm_accuracy2.ipynb  visualise_kernel.ipynb
idiots/utils/: __init__.py  itertools.py  metrics.py  optimizers.py  pytree.py  tensors.py  torch.py
runs/: .nfs000000000602385300000156  cifar10_classification.sh  grokking.sh  grokking_addition.sh  grokking_division_gd.sh  grokking_division_gf.sh  grokking_division_mlp.sh  grokking_division_mlp_1_layer.sh  grokking_division_transformer.sh  grokking_gf_addition.sh  grokking_gf_mnist.sh  grokking_mnist.sh  grokking_mnist_adamw.sh  grokking_mnist_gd.sh  grokking_mnist_gf.sh  grokking_mnist_sgd.sh  grokking_mse.sh  grokking_s5.sh  mnist-scaled.sh  mnist.sh  mnist_fixed_norm.sh  mnist_fixed_norm_gf.sh  mnist_gd_fixed_norm.sh
(+19 files in other folders)
