[tool.poetry]
name = "idiots"
version = "0.1.0"
description = ""
authors = ["andylolu2 <andylolu24@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.0"
numpy = "^1.26.4"
x-transformers = "^1.27.16"
packaging = "^23.2"
lightning = "^2.1.4"
tensorboard = "^2.15.1"
torchmetrics = "^1.3.0.post0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
